# MATOOLS

./: README.md  setup.cfg  structure.py  utility.py  vector.py
matools/: atom.py  structure.py  vector.py
matools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: pos2sheng.py
