[metadata]
name = matools
version = 0.0.1
author = Ruoyu Wang
author_email = ruoyuwang1995@gmail.com
description = For lightweight crystal structure manipulation
long_description = file: README.md
url = https://github.com/EuroGaymer/MATOOLS

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
